Project

General

Profile

Actions

Bug #43666

closed

TestMirroring.SnapshotUnlinkPeer sporadic failure

Added by Mykola Golub over 4 years ago. Updated about 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

http://qa-proxy.ceph.com/teuthology/trociny-2020-01-18_14:02:44-rbd-wip-mgolub-testing-distro-basic-smithi/4681379/teuthology.log

2020-01-18T17:24:40.508 INFO:tasks.workunit.client.0.smithi090.stdout:[ RUN      ] TestMirroring.SnapshotUnlinkPeer
2020-01-18T17:24:42.440 INFO:tasks.workunit.client.0.smithi090.stdout:/home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos8/DIST/centos8/MACHINE_SIZE/huge/release/15.0.0-9402-ga9e03e9/rpm/el8/BUILD/ceph-15.0.0-9402-ga9e03e9/src/test/librbd/test_mirroring.cc:1312: Failure
2020-01-18T17:24:42.440 INFO:tasks.workunit.client.0.smithi090.stdout:Expected equality of these values:
2020-01-18T17:24:42.440 INFO:tasks.workunit.client.0.smithi090.stdout:  -2
2020-01-18T17:24:42.440 INFO:tasks.workunit.client.0.smithi090.stdout:  image.snap_get_mirror_primary_namespace(snap_id, &mirror_snap, sizeof(mirror_snap))
2020-01-18T17:24:42.440 INFO:tasks.workunit.client.0.smithi090.stdout:    Which is: 0
2020-01-18T17:24:43.415 INFO:tasks.workunit.client.0.smithi090.stdout:[  FAILED  ] TestMirroring.SnapshotUnlinkPeer (2906 ms)
Actions #1

Updated by Mykola Golub over 4 years ago

The related part of the log:

2020-01-18T17:24:40.408+0000 7fe69bfff700  0 -- 172.21.15.90:0/2361607191 >> [v2:172.21.15.157:6800/22481,v1:172.21.15.157:6801/22481] conn(0x7fe67804ba90 msgr2=0x7fe67804ded0 crc :-1 s=STATE_CONNECTION_ESTABLISHED l=1).read_until injecting socket failure
2020-01-18T17:24:42.436+0000 7fe68f7fe700 -1 librbd::mirror::snapshot::RemoveImageStateRequest: 0x7fe6a405eba0 handle_get_object_count: failed to read image state object: (2) No such file or directory
2020-01-18T17:24:42.436+0000 7fe68f7fe700 -1 librbd::SnapshotRemoveRequest: 0x7fe6a406a690 handle_remove_image_state: failed to remove image state: (2) No such file or directory
2020-01-18T17:24:42.436+0000 7fe68f7fe700 -1 librbd::SnapshotRemoveRequest: 0x7fe6a406a690 should_complete: encountered error: (2) No such file or directory
2020-01-18T17:24:42.436+0000 7fe68f7fe700 -1 librbd::mirror::snapshot::RemoveImageStateRequest: 0x7fe6a4005410 handle_get_object_count: failed to read image state object: (2) No such file or directory
2020-01-18T17:24:42.436+0000 7fe68f7fe700 -1 librbd::SnapshotRemoveRequest: 0x7fe6a4047d90 handle_remove_image_state: failed to remove image state: (2) No such file or directory
2020-01-18T17:24:42.436+0000 7fe68f7fe700 -1 librbd::SnapshotRemoveRequest: 0x7fe6a4047d90 should_complete: encountered error: (2) No such file or directory

Actions #2

Updated by Mykola Golub over 4 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 32760
Actions #3

Updated by Jason Dillaman about 4 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF