librbd: ignore ENOENT for mirror::snapshot::RemoveImageStateRequest

It may happen (the state object already removed) when handling
replayed RPC message.

Fixes: https://tracker.ceph.com/issues/43666
Signed-off-by: Mykola Golub <mgolub@suse.com>